--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/umd/supabase.min.js"></script>
 </head>
 <body>
-    <h2>Bank App Login</h2>
+    <h2>Bank App</h2>
+
+    <!-- Registration Form -->
+    <h3>Register</h3>
+    <form id="registerForm">
+        <input type="text" id="registerUsername" class="form-input" placeholder="Username" required />
+        <input type="password" id="registerPassword" class="form-input" placeholder="Password" required />
+        <button type="submit">Register</button>
+    </form>
+
+    <!-- Login Form -->
+    <h3>Login</h3>
     <form id="loginForm">
         <input type="text" id="username" class="form-input" placeholder="Username" required />
         <input type="password" id="password" class="form-input" placeholder="Password" required />
@@ -51,6 +62,21 @@
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp1a2VkdGxjc2t0eHJzYnVwbmhzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzUxMzg5NzYsImV4cCI6MjA1MDcxNDk3Nn0.uSV4-aZj4MIxgLP6dw2Wlm4ozFikNCwB4AMuiIO7GSw';  // Replace with your Supabase anon API key
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
+        // Register form event listener
+        document.getElementById("registerForm").addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const username = document.getElementById("registerUsername").value;
+            const password = document.getElementById("registerPassword").value;
+
+            const result = await registerUser(username, password);
+            if (result) {
+                alert('Registration successful! Please log in.');
+            } else {
+                alert('Registration failed. Please try again.');
+            }
+        });
+
         // Login form event listener
         document.getElementById("loginForm").addEventListener("submit", async (e) => {
             e.preventDefault();
@@ -65,6 +91,21 @@
                 document.getElementById("userDetails").style.display = "block";
             }
         });
+
+        // Function to handle user registration
+        async function registerUser(username, password) {
+            const { data, error } = await supabase
+                .from('users')
+                .insert([
+                    { username: username, password: password, balance: 0 }
+                ]);
+
+            if (error) {
+                console.error('Registration failed:', error.message);
+                return false;
+            }
+            return true;
+        }
 
         // Function to handle user login
         async function loginUser(username, password) {
