--- a/index.html
+++ b/index.html
@@ -1,202 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank App</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        #userDetails {
-            margin-top: 20px;
-        }
-        .form-input {
-            margin: 10px 0;
-            padding: 10px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/umd/supabase.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login / Register</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+  <script src="firebase-config.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f4f4f9;
+    }
+    form {
+      margin-bottom: 20px;
+    }
+    input {
+      padding: 10px;
+      margin: 10px 0;
+      width: 100%;
+      max-width: 300px;
+      box-sizing: border-box;
+    }
+    button {
+      padding: 10px 15px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-    <h2>Bank App</h2>
+  <h1>Welcome to the Username/Password Login System</h1>
 
-    <!-- Registration Form -->
-    <h3>Register</h3>
-    <form id="registerForm">
-        <input type="text" id="registerUsername" class="form-input" placeholder="Username" required />
-        <input type="password" id="registerPassword" class="form-input" placeholder="Password" required />
-        <button type="submit">Register</button>
-    </form>
+  <h2>Register</h2>
+  <form id="register-form">
+    <input type="text" id="username" placeholder="Username" required /><br />
+    <input type="password" id="password" placeholder="Password" required /><br />
+    <button type="submit">Register</button>
+  </form>
 
-    <!-- Login Form -->
-    <h3>Login</h3>
-    <form id="loginForm">
-        <input type="text" id="username" class="form-input" placeholder="Username" required />
-        <input type="password" id="password" class="form-input" placeholder="Password" required />
-        <button type="submit">Login</button>
-    </form>
+  <h2>Login</h2>
+  <form id="login-form">
+    <input type="text" id="login-username" placeholder="Username" required /><br />
+    <input type="password" id="login-password" placeholder="Password" required /><br />
+    <button type="submit">Login</button>
+  </form>
 
-    <div id="userDetails" style="display: none;">
-        <h3>Account Details</h3>
-        <p>Username: <span id="usernameDisplay"></span></p>
-        <p>Balance: $<span id="balance"></span></p>
-        <form id="transferForm">
-            <input type="text" id="toUsername" class="form-input" placeholder="Recipient Username" required />
-            <input type="number" id="amount" class="form-input" placeholder="Amount to Send" required />
-            <button type="submit">Transfer</button>
-        </form>
-    </div>
+  <script>
+    // Handle registration
+    const registerForm = document.getElementById('register-form');
+    registerForm.addEventListener('submit', async (event) => {
+      event.preventDefault();
 
-    <script>
-        // Replace with your Supabase URL and API key
-        const supabaseUrl = 'https://jukedtlcsktxrsbupnhs.supabase.co'; // Replace with your Supabase URL
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp1a2VkdGxjc2t0eHJzYnVwbmhzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzUxMzg5NzYsImV4cCI6MjA1MDcxNDk3Nn0.uSV4-aZj4MIxgLP6dw2Wlm4ozFikNCwB4AMuiIO7GSw';  // Replace with your Supabase anon API key
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
 
-        // Register form event listener
-        document.getElementById("registerForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
+      try {
+        // Create a Firebase user with a random email (necessary for Firebase Auth)
+        const userCredential = await auth.createUserWithEmailAndPassword(`${username}@example.com`, password);
+        const user = userCredential.user;
 
-            const username = document.getElementById("registerUsername").value;
-            const password = document.getElementById("registerPassword").value;
-
-            const result = await registerUser(username, password);
-            if (result) {
-                alert('Registration successful! Please log in.');
-            } else {
-                alert('Registration failed. Please try again.');
-            }
+        // Save the username with the Firebase user ID (UID)
+        await db.collection("users").doc(user.uid).set({
+          username: username,
         });
 
-        // Login form event listener
-        document.getElementById("loginForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
+        console.log("User registered:", user);
+        // Redirect to main page after successful registration
+        window.location.href = "main.html";
+      } catch (error) {
+        console.error("Error registering user:", error.message);
+        alert(error.message);
+      }
+    });
 
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
+    // Handle login
+    const loginForm = document.getElementById('login-form');
+    loginForm.addEventListener('submit', async (event) => {
+      event.preventDefault();
 
-            const userData = await loginUser(username, password);
-            if (userData) {
-                document.getElementById("usernameDisplay").textContent = userData.username;
-                document.getElementById("balance").textContent = userData.balance;
-                document.getElementById("userDetails").style.display = "block";
-            }
-        });
+      const username = document.getElementById('login-username').value;
+      const password = document.getElementById('login-password').value;
 
-        // Function to handle user registration
-        async function registerUser(username, password) {
-            const { data, error } = await supabase
-                .from('users')
-                .insert([
-                    { username: username, password: password, balance: 0 }
-                ]);
+      try {
+        // Query Firestore to find the UID associated with the username
+        const userSnapshot = await db.collection("users").where("username", "==", username).get();
 
-            if (error) {
-                console.error('Registration failed:', error.message);
-                return false;
-            }
-            return true;
+        if (userSnapshot.empty) {
+          alert("Username not found");
+          return;
         }
 
-        // Function to handle user login
-        async function loginUser(username, password) {
-            const { data, error } = await supabase
-                .from('users')
-                .select('id, username, balance')
-                .eq('username', username)
-                .eq('password', password)
-                .single();
+        const userDoc = userSnapshot.docs[0];
+        const uid = userDoc.id;
 
-            if (error) {
-                console.error('Login failed:', error.message);
-                alert('Login failed: ' + error.message);
-                return null;
-            }
-            return data;
-        }
+        // Now authenticate using Firebase with the fake email and real password
+        await auth.signInWithEmailAndPassword(`${username}@example.com`, password);
 
-        // Transfer form event listener
-        document.getElementById("transferForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
-
-            const fromUsername = document.getElementById("usernameDisplay").textContent;
-            const toUsername = document.getElementById("toUsername").value;
-            const amount = parseFloat(document.getElementById("amount").value);
-
-            const result = await sendMoney(fromUsername, toUsername, amount);
-            if (result) {
-                document.getElementById("balance").textContent = result.newBalance;
-                alert('Transfer Successful!');
-            } else {
-                alert('Transfer Failed!');
-            }
-        });
-
-        // Function to handle money transfer
-        async function sendMoney(fromUser, toUser, amount) {
-            // Check if both users exist and have enough balance
-            const { data: fromUserData, error: fromError } = await supabase
-                .from('users')
-                .select('balance')
-                .eq('username', fromUser)
-                .single();
-
-            if (fromError) {
-                console.error('Error fetching from user data:', fromError.message);
-                return null;
-            }
-
-            if (fromUserData.balance < amount) {
-                console.error('Insufficient balance');
-                alert('Insufficient balance');
-                return null;
-            }
-
-            // Deduct amount from sender
-            const { error: deductError } = await supabase
-                .from('users')
-                .update({ balance: fromUserData.balance - amount })
-                .eq('username', fromUser);
-
-            if (deductError) {
-                console.error('Error deducting balance:', deductError.message);
-                return null;
-            }
-
-            // Add amount to receiver
-            const { data: toUserData, error: toError } = await supabase
-                .from('users')
-                .select('balance')
-                .eq('username', toUser)
-                .single();
-
-            if (toError) {
-                console.error('Error fetching to user data:', toError.message);
-                return null;
-            }
-
-            const { error: addError } = await supabase
-                .from('users')
-                .update({ balance: toUserData.balance + amount })
-                .eq('username', toUser);
-
-            if (addError) {
-                console.error('Error adding balance:', addError.message);
-                return null;
-            }
-
-            // Return new balance of the sender
-            return { newBalance: fromUserData.balance - amount };
-        }
-    </script>
+        console.log("User logged in successfully");
+        // Redirect to main page after successful login
+        window.location.href = "main.html";
+      } catch (error) {
+        console.error("Error logging in:", error.message);
+        alert(error.message);
+      }
+    });
+  </script>
 </body>
 </html>
