--- a/index.html
+++ b/index.html
@@ -1,116 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login / Register</title>
-  <!-- Firebase SDK (no need to import Firebase script here, handled in firebase-config.js) -->
-  <script src="firebase-config.js" type="module"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f4f4f9;
-    }
-    form {
-      margin-bottom: 20px;
-    }
-    input {
-      padding: 10px;
-      margin: 10px 0;
-      width: 100%;
-      max-width: 300px;
-      box-sizing: border-box;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Old Newgrounds Style</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to the Username/Password Login System</h1>
-
-  <h2>Register</h2>
-  <form id="register-form">
-    <input type="text" id="username" placeholder="Username" required /><br />
-    <input type="password" id="password" placeholder="Password" required /><br />
-    <button type="submit">Register</button>
-  </form>
-
-  <h2>Login</h2>
-  <form id="login-form">
-    <input type="text" id="login-username" placeholder="Username" required /><br />
-    <input type="password" id="login-password" placeholder="Password" required /><br />
-    <button type="submit">Login</button>
-  </form>
-
-  <script>
-    // Handle registration
-    const registerForm = document.getElementById('register-form');
-    registerForm.addEventListener('submit', async (event) => {
-      event.preventDefault();
-
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-      try {
-        // Create a Firebase user with a fake email (required for Firebase Auth)
-        const userCredential = await createUserWithEmailAndPassword(auth, `${username}@example.com`, password);
-        const user = userCredential.user;
-
-        // Save the username with the Firebase user ID (UID) in Firestore
-        await setDoc(doc(db, "users", user.uid), {
-          username: username,
-        });
-
-        console.log("User registered:", user);
-        // Redirect to the main page after successful registration
-        window.location.href = "main.html";
-      } catch (error) {
-        console.error("Error registering user:", error.message);
-        alert(error.message);
-      }
-    });
-
-    // Handle login
-    const loginForm = document.getElementById('login-form');
-    loginForm.addEventListener('submit', async (event) => {
-      event.preventDefault();
-
-      const username = document.getElementById('login-username').value;
-      const password = document.getElementById('login-password').value;
-
-      try {
-        // Query Firestore to find the UID associated with the username
-        const q = query(collection(db, "users"), where("username", "==", username));
-        const querySnapshot = await getDocs(q);
-
-        if (querySnapshot.empty) {
-          alert("Username not found");
-          return;
-        }
-
-        const userDoc = querySnapshot.docs[0];
-        const uid = userDoc.id;
-
-        // Now authenticate using Firebase with the fake email and real password
-        await signInWithEmailAndPassword(auth, `${username}@example.com`, password);
-
-        console.log("User logged in successfully");
-        // Redirect to the main page after successful login
-        window.location.href = "main.html";
-      } catch (error) {
-        console.error("Error logging in:", error.message);
-        alert(error.message);
-      }
-    });
-  </script>
+    <div class="site-container">
+        <header>
+            <img src="https://i.imgur.com/0HqT6p6.png" alt="Newgrounds Logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="btn">Home</a></li>
+                    <li><a href="images.html" class="btn">Images</a></li>
+                    <li><a href="comments.html" class="btn">Comments</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Welcome to My Old Newgrounds Style Website</h1>
+            <p>Click on the buttons above to navigate between pages.</p>
+            <a href="images.html" class="btn">See Images</a>
+        </main>
+        <footer>
+            <ul>
+                <li><a href="https://newgrounds.com">Newgrounds</a></li>
+                <li><a href="https://example.com">Example Link</a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
 </html>
