--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Old Newgrounds Style</title>
+    <title>Roblox</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="site-container">
         <header>
-            <img src="https://i.imgur.com/0HqT6p6.png" alt="Newgrounds Logo" class="logo">
+            <img src="https://i.imgur.com/0HqT6p6.png" alt="Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="index.html" class="btn">Home</a></li>
@@ -19,14 +19,14 @@
             </nav>
         </header>
         <main>
-            <h1>Welcome to My Old Newgrounds Style Website</h1>
+            <h2>welcome to the most epic website evr created</h2>
             <p>Click on the buttons above to navigate between pages.</p>
             <a href="images.html" class="btn">See Images</a>
         </main>
         <footer>
             <ul>
-                <li><a href="https://newgrounds.com">Newgrounds</a></li>
-                <li><a href="https://example.com">Example Link</a></li>
+                <li><a href="https://newgrounds.com">inspired by NEWGROUNDS.com</a></li>
+                <li><a href="https://example.com">Example Link for testing</a></li>
             </ul>
         </footer>
     </div>
