--- a/comments.html
+++ b/comments.html
@@ -3,13 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comments - Old Newgrounds Style</title>
+    <title>Comments</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url("https://i.imgur.com/B0eXPHw.png");
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: white;
+        }
+
+        .site-container {
+            width: 800px;
+            background-color: rgba(0, 0, 0, 0.8);
+            border: 5px solid #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            padding: 20px;
+        }
+
+        header {
+            width: 100%;
+            padding: 10px;
+            background-color: #222;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+
+        .logo {
+            width: 150px;
+            margin-right: 15px;
+        }
+
+        .welcome-text {
+            color: white;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        nav {
+            margin-left: auto;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            gap: 10px;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        .btn {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            padding: 5px 10px;
+            background-color: #b58900; /* Dark yellow color */
+            border: 2px solid #222;
+            transition: background-color 0.2s ease;
+        }
+
+        .btn:hover {
+            background-color: #e4b700; /* Slightly brighter yellow */
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-grow: 1;
+            font-size: 18px;
+            text-align: center;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="site-container">
         <header>
-            <img src="https://i.imgur.com/0HqT6p6.png" alt="Newgrounds Logo" class="logo">
+            <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
+            <div class="welcome-text">COMMENTS! get ready for nsfw!!</div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="btn">Home</a></li>
@@ -19,20 +105,12 @@
             </nav>
         </header>
         <main>
-            <!-- Only Buttons Here, no additional text -->
-          
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+           <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%2473Etq639YxjcDB.ledlDv."+"&opts=16798&num=10&ts=1735149223899");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%2473Etq639YxjcDB.ledlDv."+"&opts=16798&num=10&ts=1735230229307");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
         </main>
-        <footer>
-            <ul>
-                <li><a href="https://newgrounds.com">inspired by newgrounds.COM</a></li>
-                <li><a href="https://example.com">testing HREF link lOLZ!!!</a></li>
-            </ul>
-        </footer>
     </div>
 </body>
 </html>
