--- a/index.html
+++ b/index.html
@@ -3,13 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url("https://i.imgur.com/B0eXPHw.png");
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: white;
+        }
+
+        .site-container {
+            width: 800px;
+            background-color: rgba(0, 0, 0, 0.8);
+            border: 5px solid #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            padding: 20px;
+        }
+
+        header {
+            width: 100%;
+            padding: 10px;
+            background-color: #222;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+
+        .logo {
+            width: 150px;
+            margin-right: 15px;
+        }
+
+        .welcome-text {
+            color: white;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        nav {
+            margin-left: auto;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            gap: 10px;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        .btn {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            padding: 5px 10px;
+            background-color: #b58900; /* Dark yellow color */
+            border: 2px solid #222;
+            transition: background-color 0.0s ease;
+        }
+
+        .btn:hover {
+            background-color: #e4b700; /* Slightly brighter yellow */
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-grow: 1;
+            font-size: 18px;
+            text-align: center;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="site-container">
         <header>
-            <img src="https://i.imgur.com/0HqT6p6.png" alt="Logo" class="logo">
+            <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
+            <div class="welcome-text">Welcome to my website</div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="btn">Home</a></li>
@@ -19,16 +105,9 @@
             </nav>
         </header>
         <main>
-            <h2>welcome to the most epic website evr created</h2>
-            <p>Click on the buttons above to navigate between pages.</p>
-            <a href="images.html" class="btn">See Images</a>
+           welcome to the best website<br>
+            explore images and share your comments.
         </main>
-        <footer>
-            <ul>
-                <li><a href="https://newgrounds.com">inspired by NEWGROUNDS.com</a></li>
-                <li><a href="https://example.com">Example Link for testing</a></li>
-            </ul>
-        </footer>
     </div>
 </body>
 </html>
