--- a/images.html
+++ b/images.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="image-grid">
-            <img src="https://via.placeholder.com/512" alt="Image 1">
+            <img src="https://i.imgur.com/FIMJ14K.jpeg" alt="Image 1">
             <img src="https://via.placeholder.com/512" alt="Image 2">
             <img src="https://via.placeholder.com/512" alt="Image 3">
             <img src="https://via.placeholder.com/512" alt="Image 4">
