--- a/comments.html
+++ b/comments.html
@@ -14,8 +14,8 @@
             background-position: center;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start; /* Align items to the top */
+            min-height: 100vh;
             color: white;
         }
 
@@ -28,6 +28,7 @@
             align-items: center;
             position: relative;
             padding: 20px;
+            box-sizing: border-box;
         }
 
         header {
@@ -81,13 +82,16 @@
         }
 
         main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-grow: 1;
+            width: 100%; /* Ensure the main section takes full width */
+            flex-grow: 1; /* Allow it to grow with the content */
             font-size: 18px;
             text-align: center;
             color: white;
+        }
+
+        #HCB_comment_box {
+            width: 100%; /* Ensure the comment box spans the container */
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -105,11 +109,27 @@
             </nav>
         </header>
         <main>
-           <!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%2473Etq639YxjcDB.ledlDv."+"&opts=16798&num=10&ts=1735230229307");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
+            <!-- begin wwww.htmlcommentbox.com -->
+            <div id="HCB_comment_box">
+                <a href="http://www.htmlcommentbox.com">fucking website</a> is loading comments...
+            </div>
+            <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+            <script type="text/javascript" id="hcb"> 
+            /*<!--*/ 
+            if (!window.hcb_user) { 
+                hcb_user = {}; 
+            } 
+            (function() {
+                var s = document.createElement("script"), 
+                    l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"), 
+                    h = "https://www.htmlcommentbox.com";
+                s.setAttribute("type", "text/javascript"); 
+                s.setAttribute("src", h + "/jread?page=" + encodeURIComponent(l).replace("+", "%2B") + "&mod=%241%24wq1rdBcg%2473Etq639YxjcDB.ledlDv." + "&opts=16798&num=10&ts=1735230229307"); 
+                if (typeof s != "undefined") document.getElementsByTagName("head")[0].appendChild(s);
+            })(); 
+            /*-->*/ 
+            </script>
+            <!-- end www.htmlcommentbox.com -->
         </main>
     </div>
 </body>
