--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="site-container">
         <header>
             <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
-            <div class="welcome-text">Welcome to my website</div>
+            <div class="welcome-text">MERRY CHRISTMAS</div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="btn">Home</a></li>
