--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-<div id="sfc9z7xx7zbnpe7gfnwf1gcryn5t2wnxftp"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=9z7xx7zbnpe7gfnwf1gcryn5t2wnxftp&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free hit counter code"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9z7xx7zbnpe7gfnwf1gcryn5t2wnxftp" border="0" title="free hit counter code" alt="free hit counter code"></a></noscript>
+<a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=wcmaa6qykfkk541attn95uc38lnu6h9p" border="0" title="page counter" alt="page counter"></a>
     <div class="site-container">
         <header>
             <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
