--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-<div id="sfcmhy89ftst1leqwktbdly1m292u9hryt6"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=mhy89ftst1leqwktbdly1m292u9hryt6&down=async" async></script><br><a href="https://www.freecounterstat.com">web counter</a><noscript><a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=mhy89ftst1leqwktbdly1m292u9hryt6" border="0" title="web counter" alt="web counter"></a></noscript>
+<a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=x5ehp73rlu91l2fqlufg8x3k42a17fac" border="0" title="website counter" alt="website counter"></a>
     <div class="site-container">
         <header>
             <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
